# Agent-PDAI-A2

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  pyproject.toml
.github/workflows/: deploy.yml
agent/: graph.py  prompts.py  state.py  utils.py
agent/agents/: email_parser.py  place_searcher.py  proposal_writer.py  route_planner.py  supervisor.py  validator.py
agent/templates/: proposal_template.qmd
agent/tools/: google_maps.py  pdf_generator.py  pricing.py
ui/: .env.example  .npmrc  package.json  tsconfig.tsbuildinfo
ui/src/components/thread/: index.tsx
ui/src/components/thread/messages/: tool-calls.tsx
ui/src/providers/: Stream.tsx
